fix: Google Search Console 색인 차단 수정 - robots.txt, URL 리다이렉트, 링크 정리
- robots.txt에 Jekyll front matter 추가 (jekyll-sitemap 플러그인 덮어쓰기 방지)
- vercel.json trailingSlash: true 변경 (Jekyll URL 패턴 일치)
- 61개 구 URL 301 리다이렉트 규칙 추가 (/posts/YYYY/MM/Title → /posts/YYYY/MM/DD/Title)
- index_posts.mjs URL 생성 패턴에 :day 추가
- certifications 6개 파일의 한국어 URL → 영문 URL 수정
- 블로그 포스트 내부 링크 새 permalink 패턴으로 수정
- aws-saa-quiz.js 내부 링크 수정

--- a/vercel.json
+++ b/vercel.json
@@ -153,7 +153,7 @@
       ]
     }
   ],
-  "trailingSlash": false,
+  "trailingSlash": true,
   "cleanUrls": true,
   "functions": {
     "api/chat.js": {
@@ -163,6 +163,69 @@
       "maxDuration": 10
     }
   },
+  "redirects": [
+    { "source": "/posts/2025/04/SKT_Security_Issue_Complete_Response_Guide_IMEI_Check_USIMeSIM_Replace_And_MFA_Importance/", "destination": "/posts/2025/04/29/SKT_Security_Issue_Complete_Response_Guide_IMEI_Check_USIMeSIM_Replace_And_MFA_Importance/", "statusCode": 301 },
+    { "source": "/posts/2025/04/Public_PCEven_in_Safely_Passkey_OTP_Strong_Password_Management_Usage/", "destination": "/posts/2025/04/30/Public_PCEven_in_Safely_Passkey_OTP_Strong_Password_Management_Usage/", "statusCode": 301 },
+    { "source": "/posts/2025/05/Cloud_Security_Course_7Batch_-_3Week_AWS_Security_And_Finops/", "destination": "/posts/2025/05/02/Cloud_Security_Course_7Batch_-_3Week_AWS_Security_And_Finops/", "statusCode": 301 },
+    { "source": "/posts/2025/05/Kandji_macOS_Complete_Master_SetupFrom_Security_Regulation_ComplianceTo_All-in-One_Guide/", "destination": "/posts/2025/05/02/Kandji_macOS_Complete_Master_SetupFrom_Security_Regulation_ComplianceTo_All-in-One_Guide/", "statusCode": 301 },
+    { "source": "/posts/2025/05/Cloud_Security_Course_7Batch_-_4Week_AWS_Vulnerability_Inspection_And_ISMS_Response_Guide/", "destination": "/posts/2025/05/09/Cloud_Security_Course_7Batch_-_4Week_AWS_Vulnerability_Inspection_And_ISMS_Response_Guide/", "statusCode": 301 },
+    { "source": "/posts/2025/05/Cloud_Security_Course_7Batch_-_5Week_AWS_Control_Tower_And_ZTNA/", "destination": "/posts/2025/05/16/Cloud_Security_Course_7Batch_-_5Week_AWS_Control_Tower_And_ZTNA/", "statusCode": 301 },
+    { "source": "/posts/2025/05/Cloud_Security_Course_7Batch_-_6Week_Cloudflare_And_github_Security/", "destination": "/posts/2025/05/23/Cloud_Security_Course_7Batch_-_6Week_Cloudflare_And_github_Security/", "statusCode": 301 },
+    { "source": "/posts/2025/05/Amazon_Q_DeveloperAnd_GitHub_Advanced_Security_Security_And_AWS/", "destination": "/posts/2025/05/24/Amazon_Q_DeveloperAnd_GitHub_Advanced_Security_Security_And_AWS/", "statusCode": 301 },
+    { "source": "/posts/2025/05/Cloud_Security_Course_7Batch_-_7Week_Docker_And_Kubernetes_Understanding/", "destination": "/posts/2025/05/30/Cloud_Security_Course_7Batch_-_7Week_Docker_And_Kubernetes_Understanding/", "statusCode": 301 },
+    { "source": "/posts/2025/05/Kubernetes_Minikube_ampamp_K9s_Practice_Guide_Problem_From_Resolution_Practical_TestTo/", "destination": "/posts/2025/05/30/Kubernetes_Minikube_ampamp_K9s_Practice_Guide_Problem_From_Resolution_Practical_TestTo/", "statusCode": 301 },
+    { "source": "/posts/2025/06/Email_Delivery_Trust_Improve_SendGrid_SPF_DKIM_DMARC_Setup_Complete_Guide/", "destination": "/posts/2025/06/05/Email_Delivery_Trust_Improve_SendGrid_SPF_DKIM_DMARC_Setup_Complete_Guide/", "statusCode": 301 },
+    { "source": "/posts/2025/06/Cloud_Security_Course_7Batch_-_8Week_CI_CDAnd_Kubernetes_Security_Practical_Guide/", "destination": "/posts/2025/06/06/Cloud_Security_Course_7Batch_-_8Week_CI_CDAnd_Kubernetes_Security_Practical_Guide/", "statusCode": 301 },
+    { "source": "/posts/2025/06/Cloud_Security_Course_7Batch_-_9Week_DevSecOps_Integration/", "destination": "/posts/2025/06/13/Cloud_Security_Course_7Batch_-_9Week_DevSecOps_Integration/", "statusCode": 301 },
+    { "source": "/posts/2025/09/npm_Ecosystem_Large_scale_Security_Breach_20_Download_Package_Malware_Infection/", "destination": "/posts/2025/09/10/npm_Ecosystem_Large_scale_Security_Breach_20_Download_Package_Malware_Infection/", "statusCode": 301 },
+    { "source": "/posts/2025/09/AWS_reInforce_2025_Cloud_Security_Current_and_Future/", "destination": "/posts/2025/09/16/AWS_reInforce_2025_Cloud_Security_Current_and_Future/", "statusCode": 301 },
+    { "source": "/posts/2025/09/NPM_ampquotShai-Huludampquot_Self_Replication_Worm_Attack_180_Above_Package_Breach_Large_scale_Supply_Chain_Attack_Complete_Analysis/", "destination": "/posts/2025/09/17/NPM_ampquotShai-Huludampquot_Self_Replication_Worm_Attack_180_Above_Package_Breach_Large_scale_Supply_Chain_Attack_Complete_Analysis/", "statusCode": 301 },
+    { "source": "/posts/2025/10/Karpenter_v153_Node_Integration_Due_to_Large_scale_Incident_Analysis_And_Resolution/", "destination": "/posts/2025/10/02/Karpenter_v153_Node_Integration_Due_to_Large_scale_Incident_Analysis_And_Resolution/", "statusCode": 301 },
+    { "source": "/posts/2025/10/AWSIn_Database_Access_Gateway_Build_NLB_Security_Group_Complete_Guide/", "destination": "/posts/2025/10/03/AWSIn_Database_Access_Gateway_Build_NLB_Security_Group_Complete_Guide/", "statusCode": 301 },
+    { "source": "/posts/2025/10/AI_amplsquoSecretaryamprsquo_amplsquoSecurity_Holeamprsquo_For_Enterprise_AI_Service_Security_Guide/", "destination": "/posts/2025/10/31/AI_amplsquoSecretaryamprsquo_amplsquoSecurity_Holeamprsquo_For_Enterprise_AI_Service_Security_Guide/", "statusCode": 301 },
+    { "source": "/posts/2025/11/Zscaler_Complete_Guide_SSL_Inspection_Sandbox_AI_Advertisement_Harmful_Site_Complete_Block/", "destination": "/posts/2025/11/04/Zscaler_Complete_Guide_SSL_Inspection_Sandbox_AI_Advertisement_Harmful_Site_Complete_Block/", "statusCode": 301 },
+    { "source": "/posts/2025/11/Post-Mortem_2025_11_18_Cloudflare_Global_Incident_Response_Log_What_Learned/", "destination": "/posts/2025/11/19/Post-Mortem_2025_11_18_Cloudflare_Global_Incident_Response_Log_What_Learned/", "statusCode": 301 },
+    { "source": "/posts/2025/11/Cloud_Security_8Batch_OT_Guide_DevSecOpsFrom_FinOpsTo_Practical_Talent_Leap/", "destination": "/posts/2025/11/21/Cloud_Security_8Batch_OT_Guide_DevSecOpsFrom_FinOpsTo_Practical_Talent_Leap/", "statusCode": 301 },
+    { "source": "/posts/2025/11/Cloud_Security_8Batch_1Week_Infrastructure_EssenceFrom_Security_FutureTo/", "destination": "/posts/2025/11/26/Cloud_Security_8Batch_1Week_Infrastructure_EssenceFrom_Security_FutureTo/", "statusCode": 301 },
+    { "source": "/posts/2025/12/Cloud_Security_8Batch_2Week_AWS_Security_Architecture_Core_VPCFrom_GuardDutyTo_Complete_Conquer/", "destination": "/posts/2025/12/05/Cloud_Security_8Batch_2Week_AWS_Security_Architecture_Core_VPCFrom_GuardDutyTo_Complete_Conquer/", "statusCode": 301 },
+    { "source": "/posts/2025/12/Cloud_Security_8Batch_3Week_AWS_FinOps_ArchitectureFrom_ISMS-P_Security_AuditTo_Complete_Strategy/", "destination": "/posts/2025/12/12/Cloud_Security_8Batch_3Week_AWS_FinOps_ArchitectureFrom_ISMS-P_Security_AuditTo_Complete_Strategy/", "statusCode": 301 },
+    { "source": "/posts/2025/12/12_Conference_Review_AWSKRUG_OWASP_Datadog_Preview_See_2025_AIAnd_Security_Coexistence/", "destination": "/posts/2025/12/17/12_Conference_Review_AWSKRUG_OWASP_Datadog_Preview_See_2025_AIAnd_Security_Coexistence/", "statusCode": 301 },
+    { "source": "/posts/2025/12/Cloud_Security_8Batch_4Week_Integration_Security_Vulnerability_Inspection_And_ISMS-P_Certification_Response/", "destination": "/posts/2025/12/19/Cloud_Security_8Batch_4Week_Integration_Security_Vulnerability_Inspection_And_ISMS-P_Certification_Response/", "statusCode": 301 },
+    { "source": "/posts/2025/12/Cloud_Security_Course_8Batch_5Week_AWS_Control_TowerSCP_Based_Governance_And_Datadog_SIEM_Cloudflare_Security/", "destination": "/posts/2025/12/24/Cloud_Security_Course_8Batch_5Week_AWS_Control_TowerSCP_Based_Governance_And_Datadog_SIEM_Cloudflare_Security/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tesla_FSD_2026_Complete_Guide_Model_Y_Juniper_Security_DevSecOps/", "destination": "/posts/2026/01/01/Tesla_FSD_2026_Complete_Guide_Model_Y_Juniper_Security_DevSecOps/", "statusCode": 301 },
+    { "source": "/posts/2026/01/OWASP_2025_Latest_Update_Complete_Guide_Top_10_Agentic_AI_Security/", "destination": "/posts/2026/01/03/OWASP_2025_Latest_Update_Complete_Guide_Top_10_Agentic_AI_Security/", "statusCode": 301 },
+    { "source": "/posts/2026/01/DevSecOps_Viewing_Automotive_Security_Complete_Guide/", "destination": "/posts/2026/01/06/DevSecOps_Viewing_Automotive_Security_Complete_Guide/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Blockchain_Cryptocurrency_Security_Complete_Guide_DevSecOps_From_Perspective_View_GitHub_Security_Tools_And_Best_Practice/", "destination": "/posts/2026/01/08/Blockchain_Cryptocurrency_Security_Complete_Guide_DevSecOps_From_Perspective_View_GitHub_Security_Tools_And_Best_Practice/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Cloud_Security_Course_8Batch_6Week_AWS_WAF_CloudFront_Security_Architecture_And_GitHub_DevSecOps_Practical/", "destination": "/posts/2026/01/08/Cloud_Security_Course_8Batch_6Week_AWS_WAF_CloudFront_Security_Architecture_And_GitHub_DevSecOps_Practical/", "statusCode": 301 },
+    { "source": "/posts/2026/01/2026_DevSecOps_Roadmap_Complete_Guide_roadmap.sh_Analysis/", "destination": "/posts/2026/01/10/2026_DevSecOps_Roadmap_Complete_Guide_roadmap.sh_Analysis/", "statusCode": 301 },
+    { "source": "/posts/2026/01/AI_Music_Video_Generation_Complete_Guide_DevSecOps_Perspective/", "destination": "/posts/2026/01/11/AI_Music_Video_Generation_Complete_Guide_DevSecOps_Perspective/", "statusCode": 301 },
+    { "source": "/posts/2026/01/2025_ISMS-P_Certification_Complete_Guide_AWS_In_Environment_Management_System_Establishment_And_Protection_Measures_Implementation/", "destination": "/posts/2026/01/14/2025_ISMS-P_Certification_Complete_Guide_AWS_In_Environment_Management_System_Establishment_And_Protection_Measures_Implementation/", "statusCode": 301 },
+    { "source": "/posts/2026/01/AWS_Cloud_Security_Complete_Guide_IAMFrom_EKSTo_Security_Architecture/", "destination": "/posts/2026/01/14/AWS_Cloud_Security_Complete_Guide_IAMFrom_EKSTo_Security_Architecture/", "statusCode": 301 },
+    { "source": "/posts/2026/01/CSPM_DataDog_AWS_Security_Guide_Automated_Security_Setup_Verification_And_Compliance_Monitoring/", "destination": "/posts/2026/01/14/CSPM_DataDog_AWS_Security_Guide_Automated_Security_Setup_Verification_And_Compliance_Monitoring/", "statusCode": 301 },
+    { "source": "/posts/2026/01/GCP_Cloud_Security_Complete_Guide_IAMFrom_GKETo_Security_Architecture/", "destination": "/posts/2026/01/14/GCP_Cloud_Security_Complete_Guide_IAMFrom_GKETo_Security_Architecture/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Cloud_Security_Course_8Batch_7Week_Docker_Kubernetes_Security_Practical_Guide/", "destination": "/posts/2026/01/15/Cloud_Security_Course_8Batch_7Week_Docker_Kubernetes_Security_Practical_Guide/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Postmortem_NextJS_SSR_Error_Cloudflare_Blocking_ALB_5XX_Incident_Analysis/", "destination": "/posts/2026/01/16/Postmortem_NextJS_SSR_Error_Cloudflare_Blocking_ALB_5XX_Incident_Analysis/", "statusCode": 301 },
+    { "source": "/posts/2026/01/AI_Coding_Assistants_Comparison_Gemini_Claude_Code_ChatGPT_OpenCode_2025_2026_Research_Analysis/", "destination": "/posts/2026/01/17/AI_Coding_Assistants_Comparison_Gemini_Claude_Code_ChatGPT_OpenCode_2025_2026_Research_Analysis/", "statusCode": 301 },
+    { "source": "/posts/2026/01/AWS_GCP_Cloud_Updates_January_2026_EC2_G7e_X8i_Bangkok_Region_European_Sovereign_Cloud/", "destination": "/posts/2026/01/22/AWS_GCP_Cloud_Updates_January_2026_EC2_G7e_X8i_Bangkok_Region_European_Sovereign_Cloud/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Cloud_Security_Course_8Batch_8Week_CI_CD_Kubernetes_Security_Practical_Guide/", "destination": "/posts/2026/01/22/Cloud_Security_Course_8Batch_8Week_CI_CD_Kubernetes_Security_Practical_Guide/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Cloud_Security_Trends_January_2026_Kubernetes_82_Percent_Production_VS_Code_Threats_CNCF_Survey/", "destination": "/posts/2026/01/22/Cloud_Security_Trends_January_2026_Kubernetes_82_Percent_Production_VS_Code_Threats_CNCF_Survey/", "statusCode": 301 },
+    { "source": "/posts/2026/01/KARA_Ransomware_Trends_Report_2025_Q3_Analysis_SK_Shieldus_EQST/", "destination": "/posts/2026/01/22/KARA_Ransomware_Trends_Report_2025_Q3_Analysis_SK_Shieldus_EQST/", "statusCode": 301 },
+    { "source": "/posts/2026/01/KISA_Security_Advisory_Ransomware_Prevention_Linux_Rootkit_Detection_Guide_Analysis/", "destination": "/posts/2026/01/22/KISA_Security_Advisory_Ransomware_Prevention_Linux_Rootkit_Detection_Guide_Analysis/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Security_Vendor_Blog_Weekly_Review/", "destination": "/posts/2026/01/22/Security_Vendor_Blog_Weekly_Review/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_Microsoft_AitM_Phishing_Agentic_AI_Zero_Trust_OpenAI_PostgreSQL/", "destination": "/posts/2026/01/23/Tech_Security_Weekly_Digest_Microsoft_AitM_Phishing_Agentic_AI_Zero_Trust_OpenAI_PostgreSQL/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_BitLocker_FBI_Cloudflare_Route_Leak_Agentic_Enterprise_Docker/", "destination": "/posts/2026/01/24/Tech_Security_Weekly_Digest_BitLocker_FBI_Cloudflare_Route_Leak_Agentic_Enterprise_Docker/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_VMware_vCenter_Fortinet_SSO_Sandworm_DynoWiper_AI_Agents/", "destination": "/posts/2026/01/25/Tech_Security_Weekly_Digest_VMware_vCenter_Fortinet_SSO_Sandworm_DynoWiper_AI_Agents/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_Zero_Trust_Agentic_AI_Chrome_Tech_Support_Scam_Terraform_Stacks/", "destination": "/posts/2026/01/26/Tech_Security_Weekly_Digest_Zero_Trust_Agentic_AI_Chrome_Tech_Support_Scam_Terraform_Stacks/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_MS_Office_Zero_Day_Kimi_K25_Kimwolf_Botnet_AWS_G7e/", "destination": "/posts/2026/01/27/Tech_Security_Weekly_Digest_MS_Office_Zero_Day_Kimi_K25_Kimwolf_Botnet_AWS_G7e/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Claude_MD_Security_Guide/", "destination": "/posts/2026/01/28/Claude_MD_Security_Guide/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_MS_Office_Zero_Day_CTEM_Grist_Core_RCE/", "destination": "/posts/2026/01/28/Tech_Security_Weekly_Digest_MS_Office_Zero_Day_CTEM_Grist_Core_RCE/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_n8n_RCE_D_Link_Zero_Day_Kubernetes_AI_Agent/", "destination": "/posts/2026/01/29/Tech_Security_Weekly_Digest_n8n_RCE_D_Link_Zero_Day_Kubernetes_AI_Agent/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_Ollama_AI_SolarWinds_RCE_Google_IPIDEA/", "destination": "/posts/2026/01/30/Tech_Security_Weekly_Digest_Ollama_AI_SolarWinds_RCE_Google_IPIDEA/", "statusCode": 301 },
+    { "source": "/posts/2026/01/Tech_Security_Weekly_Digest_ShinyHunters_Vishing_Chrome_Extension_OT_Attack/", "destination": "/posts/2026/01/31/Tech_Security_Weekly_Digest_ShinyHunters_Vishing_Chrome_Extension_OT_Attack/", "statusCode": 301 },
+    { "source": "/posts/2026/02/Agentic_AI_Security_2026_Attack_Vectors_Defense_Architecture/", "destination": "/posts/2026/02/01/Agentic_AI_Security_2026_Attack_Vectors_Defense_Architecture/", "statusCode": 301 },
+    { "source": "/posts/2026/02/Tech_Security_Weekly_Digest_AI_OpenSSL_Zero_Day_OWASP_Agentic_Fortinet/", "destination": "/posts/2026/02/01/Tech_Security_Weekly_Digest_AI_OpenSSL_Zero_Day_OWASP_Agentic_Fortinet/", "statusCode": 301 },
+    { "source": "/posts/2026/02/Tech_Security_Weekly_Digest_Notepadpp_Hijack_Bitcoin_Crash_AI_Agents/", "destination": "/posts/2026/02/02/Tech_Security_Weekly_Digest_Notepadpp_Hijack_Bitcoin_Crash_AI_Agents/", "statusCode": 301 }
+  ],
   "rewrites": [
     {
       "source": "/favicon.ico",
