--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -141,6 +141,22 @@ jobs:
           ls -la _posts/*.md 2>/dev/null | tail -3 || echo "No posts found"
           ls -la assets/images/*.svg 2>/dev/null | tail -3 || echo "No images found"
 
+      - name: Auto publish tech blog digest
+        if: steps.check_news.outputs.has_enough_news == 'true'
+        run: |
+          DRY_RUN="${{ github.event.inputs.dry_run || 'false' }}"
+          MAX_NEWS="${{ github.event.inputs.max_news || '10' }}"
+          HOURS="${{ github.event.inputs.hours || '24' }}"
+
+          CMD="python3 scripts/auto_publish_news.py --mode tech-blog --hours $HOURS --max-news $MAX_NEWS"
+
+          if [ "$DRY_RUN" = "true" ]; then
+            CMD="$CMD --dry-run"
+          fi
+
+          echo "Running: $CMD"
+          $CMD || echo "⚠️ Tech blog digest skipped or failed (non-fatal)"
+
       - name: Validate post quality
         if: steps.check_news.outputs.has_enough_news == 'true'
         run: |
@@ -196,7 +212,7 @@ jobs:
           
           # 여러 패턴의 포스트 파일 확인
           POST_FILE=""
-          for pattern in "_posts/${TODAY}-Tech_Security_Weekly_Digest.md" "_posts/${TODAY}-Tech_Security_Weekly_Digest_*.md" "_posts/${TODAY}-*.md"; do
+          for pattern in "_posts/${TODAY}-Tech_Security_Weekly_Digest.md" "_posts/${TODAY}-Tech_Security_Weekly_Digest_*.md" "_posts/${TODAY}-Tech_Blog_Weekly_Digest_*.md" "_posts/${TODAY}-*.md"; do
             found=$(ls $pattern 2>/dev/null | head -1)
             if [ -n "$found" ]; then
               POST_FILE="$found"
