feat: 2월 3일 보안/DevOps 다이제스트 포스트 및 자동 포스팅 중복 수정
- 2월 3일 Weekly Security DevOps Digest 포스트 추가
  (OpenClaw AI 에이전트 보안, Jamf/Intune MDM 앱 비활성화)
- auto_publish_news.py 중복 체크 로직 개선
  (수동 생성 포스트 패턴도 감지)
- daily-news.yml POST_FILE 패턴 확장
- 2월 2일 포스트 SVG 이미지 고품질 업데이트
  (날짜 수정, 멀티카드 레이아웃)

--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -161,7 +161,7 @@ jobs:
         if: steps.check_news.outputs.has_enough_news == 'true'
         run: |
           TODAY=$(date +%Y-%m-%d)
-          POST_FILE=$(ls _posts/${TODAY}-Tech_Security_Weekly_Digest*.md 2>/dev/null | head -1)
+          POST_FILE=$(ls _posts/${TODAY}-*Digest*.md _posts/${TODAY}-*Weekly*.md 2>/dev/null | sort -u | head -1)
 
           if [ -n "$POST_FILE" ] && [ -f "$POST_FILE" ]; then
             echo "📋 Validating post quality..."
