--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -113,49 +113,41 @@ jobs:
             echo "❌ No news collected - _data/collected_news.json not found"
           fi
       
-      - name: Auto publish news post
+      - name: Auto publish daily digest (single post per day)
         if: steps.check_news.outputs.has_enough_news == 'true'
         run: |
           DRY_RUN="${{ github.event.inputs.dry_run || 'false' }}"
           MAX_NEWS="${{ github.event.inputs.max_news || '15' }}"
           HOURS="${{ github.event.inputs.hours || '24' }}"
-          
+          TODAY=$(date +%Y-%m-%d)
+
           echo "📊 Debug Info:"
           echo "  - Event: ${{ github.event_name }}"
           echo "  - Dry Run: $DRY_RUN"
           echo "  - Max News: $MAX_NEWS"
           echo "  - Hours: $HOURS"
           echo "  - Trigger Time: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
-          
-          CMD="python3 scripts/auto_publish_news.py --hours $HOURS --max-news $MAX_NEWS"
-          
-          if [ "$DRY_RUN" = "true" ]; then
-            CMD="$CMD --dry-run"
+
+          # Check if any post already exists for today (manual or auto)
+          EXISTING=$(ls _posts/${TODAY}-*Digest*.md _posts/${TODAY}-*Weekly*.md 2>/dev/null | head -1)
+          if [ -n "$EXISTING" ]; then
+            echo "⏭️ Post already exists for today: $EXISTING"
+            echo "   Skipping auto-publish to avoid duplicates (1 post/day policy)."
+          else
+            CMD="python3 scripts/auto_publish_news.py --hours $HOURS --max-news $MAX_NEWS"
+
+            if [ "$DRY_RUN" = "true" ]; then
+              CMD="$CMD --dry-run"
+            fi
+
+            echo "Running: $CMD"
+            $CMD
           fi
-          
-          echo "Running: $CMD"
-          $CMD
-          
+
           echo ""
-          echo "📁 Generated files:"
-          ls -la _posts/*.md 2>/dev/null | tail -3 || echo "No posts found"
-          ls -la assets/images/*.svg 2>/dev/null | tail -3 || echo "No images found"
-
-      - name: Auto publish tech blog digest
-        if: steps.check_news.outputs.has_enough_news == 'true'
-        run: |
-          DRY_RUN="${{ github.event.inputs.dry_run || 'false' }}"
-          MAX_NEWS="${{ github.event.inputs.max_news || '10' }}"
-          HOURS="${{ github.event.inputs.hours || '24' }}"
-
-          CMD="python3 scripts/auto_publish_news.py --mode tech-blog --hours $HOURS --max-news $MAX_NEWS"
-
-          if [ "$DRY_RUN" = "true" ]; then
-            CMD="$CMD --dry-run"
-          fi
-
-          echo "Running: $CMD"
-          $CMD || echo "⚠️ Tech blog digest skipped or failed (non-fatal)"
+          echo "📁 Today's files:"
+          ls -la _posts/${TODAY}-*.md 2>/dev/null || echo "No posts found"
+          ls -la assets/images/${TODAY}-*.svg 2>/dev/null || echo "No images found"
 
       - name: Validate post quality
         if: steps.check_news.outputs.has_enough_news == 'true'
