feat: Free tier 최대 활용 - Sentry Replay, Cloudflare Analytics, Dependabot
- Sentry Replay 재활성화 (50회/월 Free tier, error-only 50% 샘플링)
- Cloudflare Web Analytics 설정 키 활성화 (토큰 입력 시 자동 활성화)
- Dependabot 보안 업데이트 설정 (bundler + github-actions, 주간)

--- a/_config.yml
+++ b/_config.yml
@@ -201,7 +201,7 @@ sentry_dsn: "https://61fd23528aff138753e071de26c5b306@o4510686170710016.ingest.u
 
 # Cloudflare Web Analytics (무료, 프라이버시 친화적)
 # 토큰 발급: Cloudflare Dashboard → Analytics & Logs → Web Analytics → Add a site
-# cloudflare_analytics_token: "YOUR_CLOUDFLARE_BEACON_TOKEN"
+cloudflare_analytics_token: ""
 
 # Open Graph & Social Sharing
 # 기본 이미지는 SVG로 생성되며, PNG로 변환하려면 scripts/generate_og_image.py 실행
