chore: GitHub Actions 스케줄 오전 10시 통일 및 중복 포스트 제거
**변경사항:**

1. GitHub Actions 스케줄 조정:
   - monitoring.yml: 6시간마다 (0 */6 * * *) → 오전 10시 (0 1 * * *)
   - daily-news.yml: 오후 6시 백업 스케줄 제거 (오전 10시만 실행)

2. 중복 포스트 삭제:
   - 삭제: 2026-02-05-Tech_Security_Weekly_Digest_AI_Malware_Go_Security.md
   - 삭제: 관련 이미지 파일

**이유:**
- 일관된 실행 시간으로 워크플로우 관리 간소화
- 리소스 사용 최적화 (6시간마다 → 하루 1회)
- 중복 콘텐츠 제거

--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -2,8 +2,9 @@ name: Production Monitoring
 
 on:
   schedule:
-    # Run monitoring every 6 hours
-    - cron: '0 */6 * * *'
+    # 매일 오전 10시 KST = UTC 01:00
+    # GitHub Actions cron은 큐 지연이 있을 수 있음 (최대 15-30분)
+    - cron: '0 1 * * *'
   # Also allow manual trigger
   workflow_dispatch:
 
