--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -38,28 +38,31 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const body = [
+              '## Production Monitoring Failed',
+              '',
+              '**Time**: ' + new Date().toISOString(),
+              '',
+              '**Workflow Run**: [View Run](' + '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}' + ')',
+              '',
+              '**Details**:',
+              '- Check the workflow run logs for detailed error information',
+              '- This usually indicates deployment issues, performance degradation, or API connectivity problems',
+              '',
+              '## Action Items',
+              '- [ ] Review deployment logs',
+              '- [ ] Check Vercel dashboard',
+              '- [ ] Verify Sentry configuration',
+              '- [ ] Check API key expiration',
+              '',
+              '---',
+              '*Automated monitoring alert*'
+            ].join('\n');
             github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
               title: '🚨 Production Monitoring Alert - ' + new Date().toISOString().split('T')[0],
-              body: `## Production Monitoring Failed
-
-**Time**: ${new Date().toISOString()}
-
-**Workflow Run**: [${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-
-**Details**:
-- Check the workflow run logs for detailed error information
-- This usually indicates deployment issues, performance degradation, or API connectivity problems
-
-## Action Items
-- [ ] Review deployment logs
-- [ ] Check Vercel dashboard
-- [ ] Verify Sentry configuration
-- [ ] Check API key expiration
-
----
-*Automated monitoring alert*`,
+              body: body,
               labels: ['monitoring', 'alert', 'production']
             })
 
