--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -8,6 +8,10 @@ on:
   # Also allow manual trigger
   workflow_dispatch:
 
+permissions:
+  issues: write
+  contents: read
+
 jobs:
   monitor:
     runs-on: ubuntu-latest
@@ -69,8 +73,9 @@ jobs:
       - name: Slack notification on failure
         if: failure()
         uses: slackapi/slack-github-action@v1.24.0
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
         with:
-          webhook-url: ${{ secrets.SLACK_WEBHOOK }}
           payload: |
             {
               "text": "🚨 Production Monitoring Alert",
