improve: 성능/SEO/접근성 P0+P1 개선 및 CDP 브라우저 컬렉터 추가
- Vercel 빌드 캐시 활성화 (60-70% 빌드 단축)
- 가짜 hreflang 태그 제거 (ja/zh-Hans/zh-Hant)
- Lightbox CSS 외부화 → _sass/_lightbox.scss (HTML 15KB 감소)
- 중복 robots 메타태그 통합 (3개 → 1개)
- Google Fonts 요청 통합 (2개 → 1개)
- WCAG 2.1 AA focus-visible 스타일 추가
- Lightbox ARIA 접근성 속성 추가
- Security audit CI 워크플로우 추가 (npm+bundle audit)
- Playwright MCP 기반 CDP 브라우저 컬렉터 스크립트 추가
- SVG 이미지 최적화

--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,7 @@
       "BUNDLE_JOBS": "4",
       "BUNDLE_PATH": "vendor/bundle",
       "BUNDLE_RETRY": "3",
-      "JEKYLL_LOG_LEVEL": "warn",
-      "VERCEL_FORCE_NO_BUILD_CACHE": "1"
+      "JEKYLL_LOG_LEVEL": "warn"
     }
   },
   "git": {
