improve: P1/P2 품질 개선 14개 파일 수정
P1 수정:
- _config.yml: placeholder email 제거
- package.json: 미사용 Prisma 의존성 제거 (빌드 시간 절감)
- main-core.js: Giscus 테마 동기화 (themeChanged 이벤트 dispatch 추가)
- share-buttons.html: KakaoTalk javascript:void(0) → button 변환 (접근성)
- sentry.html: SDK 8.42.0 → 9.5.0 업데이트 (SRI hash 갱신)
- performance-monitor.html: deprecated performance.timing → Navigation Timing API
- 3개 포스트: 닫는 코드 펜스 오류 수정 (```text/```yaml/```c → ```)

P2 수정:
- main.scss: 누락된 _lightbox.scss import 추가
- sw.js: 미사용 CACHE_NAME 제거, CSS 캐시 ignoreSearch 적용
- post.html: 한국어 읽기 시간 계산 개선 (500자/분), scroll passive 추가
- setup_linkedin_keys.sh: sed 명령 injection 방지, export 안전화
- buttondown_notify_batch.py: .env 파싱 보안 강화 (quote strip, key 검증)

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ keywords_en: "DevSecOps, Cloud Security, Kubernetes Security, AWS Security, GCP 
 # Author
 author:
   name: "Twodragon"
-  email: "contact@example.com"  # 실제 이메일 주소로 교체 필요
+  email: ""
   bio: "Security Engineer & DevSecOps Specialist"
   avatar: "/assets/images/avatar.png"
   github: "Twodragon0"
