--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -71,7 +71,7 @@ jobs:
             })
 
       - name: Slack notification on failure
-        if: failure()
+        if: failure() && secrets.SLACK_WEBHOOK != ''
         uses: slackapi/slack-github-action@v1.24.0
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
