--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -71,9 +71,10 @@ jobs:
             })
 
       - name: Slack notification on failure
-        if: ${{ failure() && secrets.SLACK_WEBHOOK != '' }}
+        if: ${{ failure() && env.SLACK_WEBHOOK_CONFIGURED == 'true' }}
         uses: slackapi/slack-github-action@v1.24.0
         env:
+          SLACK_WEBHOOK_CONFIGURED: ${{ secrets.SLACK_WEBHOOK != '' }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
         with:
           payload: |
