--- a/.github/workflows/slack-category-digest.yml
+++ b/.github/workflows/slack-category-digest.yml
@@ -2,7 +2,7 @@ name: Slack Category Digest
 
 on:
   schedule:
-    - cron: "0 1 * * *"
+    - cron: "0 2 * * *"
   workflow_dispatch: {}
 
 permissions:
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   post-category-digest:
+    if: github.event_name != 'schedule' || vars.SLACK_CATEGORY_DIGEST_SCHEDULE != 'false'
     runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
@@ -24,6 +25,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
       - name: Install dependencies
         run: python -m pip install --upgrade pip pyyaml
@@ -48,8 +50,8 @@ jobs:
             echo "EOF"
           } >> "$GITHUB_OUTPUT"
 
-      - name: Validate OpenClaw config
-        id: openclaw-config
+      - name: Validate AI config
+        id: ai-config
         shell: bash
         env:
           TARGET_CHANNEL_ALIAS: ${{ matrix.channel_alias }}
@@ -79,11 +81,11 @@ jobs:
           esac
 
           if [ -z "$OPENCLAW_GATEWAY_URL" ]; then
-            echo "No OpenClaw gateway URL; skip post"
+            echo "No AI gateway URL; skip post"
             can_post=false
           fi
           if [ -z "$OPENCLAW_GATEWAY_TOKEN" ]; then
-            echo "No OpenClaw gateway token; skip post"
+            echo "No AI gateway token; skip post"
             can_post=false
           fi
           if [ -z "$channel_id" ]; then
@@ -95,16 +97,16 @@ jobs:
           echo "gateway_url=$OPENCLAW_GATEWAY_URL" >> "$GITHUB_OUTPUT"
           echo "gateway_token=$OPENCLAW_GATEWAY_TOKEN" >> "$GITHUB_OUTPUT"
 
-      - name: Post to Slack via OpenClaw Gateway
-        if: steps.digest.outputs.has_message == 'true' && steps.openclaw-config.outputs.can_post == 'true'
+      - name: Post to Slack via AI Gateway
+        if: steps.digest.outputs.has_message == 'true' && steps.ai-config.outputs.can_post == 'true'
         shell: bash
         env:
           MESSAGE: ${{ steps.digest.outputs.message }}
-          TARGET_CHANNEL_ID: ${{ steps.openclaw-config.outputs.channel_id }}
+          TARGET_CHANNEL_ID: ${{ steps.ai-config.outputs.channel_id }}
         run: |
           set -euo pipefail
           payload=$(python -c 'import json,os; message=os.environ.get("MESSAGE", ""); channel_id=os.environ.get("TARGET_CHANNEL_ID", ""); payload={"tool":"message","action":"send","args":{"channel":"slack","target":f"channel:{channel_id}","message":message}}; print(json.dumps(payload, ensure_ascii=False))')
-          curl -sS "${{ steps.openclaw-config.outputs.gateway_url }}/tools/invoke" \
-            -H "Authorization: Bearer ${{ steps.openclaw-config.outputs.gateway_token }}" \
+          curl -sS "${{ steps.ai-config.outputs.gateway_url }}/tools/invoke" \
+            -H "Authorization: Bearer ${{ steps.ai-config.outputs.gateway_token }}" \
             -H "Content-Type: application/json" \
             -d "$payload"
